fix svg on firefox

--- a/src/components/heroanimation/heroanimation.scss
+++ b/src/components/heroanimation/heroanimation.scss
@@ -161,6 +161,9 @@
     font-size: 60px;
     color: #313d42;
     cursor: pointer;
+    svg {
+      max-width: 60px;
+    }
   }
 }
 
